--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 accompanist-swiperefresh = "0.24.13-rc"
-agp = "8.2.0-beta06"
+agp = "8.2.2"
 coil-compose = "2.6.0"
 dagger = "2.46.1"
 kotlin = "1.8.10"
